--- a/q1_ferreiraRylee.html
+++ b/q1_ferreiraRylee.html
@@ -3,7 +3,7 @@
 <title>Supernatural Trivia Quiz</title>
 <style type="text/css">
 	body{
-	    background-image :  url(http://giphy.com/gifs/title-card-HCAAEP2M7FruE);
+	    background-image :  url("ryleeferreira0.github.io/images/q1.jpg");
 	    background-repeat : no-repeat;
 	background-size: 100% 100%;      
 	position:absolute; 
