--- a/q3_ferreiraRylee.html
+++ b/q3_ferreiraRylee.html
@@ -2,7 +2,7 @@
 <head>
 <title>Computer Science Quiz</title>
 <style type="text/css">
-	body{background-image :  url(http://cdn.wallpapersafari.com/98/37/YD6Fhv.jpeg);background-repeat : no-repeat;
+	body{background-image :  url("ryleeferreira0.github.io/images/q3.jpg");background-repeat : no-repeat;
 	           
 	position:absolute; 
 	margin-left: 5%;
