--- a/q7_ferreiraRylee.html
+++ b/q7_ferreiraRylee.html
@@ -2,7 +2,7 @@
 <head>
 <title>Computer Science Quiz</title>
 <style type="text/css">
-	body{background-image :  url("images/q7.png");background-repeat : no-repeat;
+	body{background-image :  url("ryleeferreira0.github.io/images/q7.png");background-repeat : no-repeat;
     position:absolute; 
 	margin-left: 5%;
 	margin-top: 5%;
