--- a/q14_ferreiraRylee.html
+++ b/q14_ferreiraRylee.html
@@ -2,7 +2,7 @@
 <head>
 <title>Computer Science Quiz</title>
 <style type="text/css">
-	body{background-image :  url("images/q14.jpg");background-repeat : no-repeat;
+	body{background-image :  url("ryleeferreira0.github.io/images/q14.jpg");background-repeat : no-repeat;
 	           
 	position:absolute; 
 	margin-left: 5%;
