--- a/q1_ferreiraRylee.html
+++ b/q1_ferreiraRylee.html
@@ -7,7 +7,7 @@
 	position:absolute; 
 	margin-left: 5%;
 	margin-top: 5%;
-	color:black;
+	color:white;
 	font-size:20px;
 	font-family:Georgia;
 	}
@@ -17,8 +17,10 @@
 <body>
 
 <FORM name="view">  
-	<h2>Question 1</h2>
+<h2>Question 1</h2>
+
 	<TEXTAREA COLS=36 ROWS=9 name="question" wrap="virtual">What is an example of an optical drive?
+	
 	a) DVD player
 	b) Video card
 	c) Monitor 
@@ -28,4 +30,3 @@
 
 </body>
 </html>
-
