--- a/q6_ferreiraRylee.html
+++ b/q6_ferreiraRylee.html
@@ -7,7 +7,7 @@
 	position:absolute; 
 	margin-left: 5%;
 	margin-top: 5%;
-	color:black;
+	color:white;
 	font-size:20px;
 	font-family:Georgia;
 	}
